[package]
name = "rathole-pro"
version = "0.2.0"
edition = "2021"
authors = ["iPmart Network (Ali Hassanzadeh)"]
description = "RatholePro — High-performance reverse proxy tunnel with multiplexing and UDP forwarding."
license = "Apache-2.0"
repository = "https://github.com/iPmartNetwork/RatholePro"
homepage = "https://github.com/iPmartNetwork/RatholePro"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
